--- a/products-service/src/main/resources/application.yml
+++ b/products-service/src/main/resources/application.yml
@@ -23,4 +23,8 @@ management:
 
 logging:
   level:
-    org.springframework.boot.context.config: DEBUG
+    root: ERROR
+    org.springframework: DEBUG
+    com.jorgeandreu: DEBUG
+
+debug: true
