--- a/products-service/pom.xml
+++ b/products-service/pom.xml
@@ -32,6 +32,7 @@
 		<java.version>21</java.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok.version>1.18.30</lombok.version>
+		<sonar.organization>jorgeandreudev</sonar.organization>
 	</properties>
 	<dependencies>
 
