--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,3 +17,8 @@ sonar.coverage.jacoco.xmlReportPaths=products-service/target/site/jacoco/jacoco.
 
 # Encoding
 sonar.sourceEncoding=UTF-8
+
+# sonar-project.properties (root)
+sonar.host.url=https://sonarcloud.io
+# Exclusions opcionales:
+sonar.coverage.exclusions=**/infrastructure/api/**,**/ApiUtil.java,**/ProductsServiceApplication.java,**/WebResponseUtil.java
