--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,56 @@
 
-**Workflow CI simple** `/.github/workflows/ci.yml`
-```yaml
 name: CI
+
 on:
   pull_request:
+    branches: [ main, master ]
   push:
-    branches: [main]
+    branches: [ main, master ]
+
 jobs:
-  build-test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '21'
-      - uses: actions/cache@v4
+          cache: maven
+
+      - name: Build & Test with coverage (fail if coverage < threshold)
+        run: mvn -B -U clean verify
+
+      - name: Upload unit test reports (artifact)
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          path: ~/.m2/repository
-          key: maven-${{ hashFiles('**/pom.xml') }}
-      - name: Build
-        run: mvn -q -DskipTests=false clean verify
+          name: surefire-reports
+          path: '**/target/surefire-reports/*'
+
+  sonarcloud:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+          cache: maven
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=${{ vars.SONAR_ORGANIZATION || 'jorgeandreudev' }}
+            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY || 'jorgeandreudev_retail-platform' }}
+
