--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -11,39 +11,31 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
           cache: maven
-
       - name: Build & Test with coverage (fail if coverage < threshold)
         run: mvn -B -U clean verify
-
-      - name: Upload unit test reports (artifact)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: surefire-reports
-          path: '**/target/surefire-reports/*'
 
   sonarcloud:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
           cache: maven
+
+      # IMPORTANTE: compilar aquí también para tener target/classes
+      - name: Build (no tests) for analyzer classpath
+        run: mvn -B -U -DskipTests package
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -51,6 +43,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
-            -Dsonar.organization=${{ vars.SONAR_ORGANIZATION || 'jorgeandreudev' }}
-            -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY || 'jorgeandreudev_retail-platform' }}
-
+            -Dsonar.organization=jorgeandreudev
+            -Dsonar.projectKey=jorgeandreudev_retail-platform
+            -Dsonar.java.binaries=**/target/classes
