--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,8 @@ sonar.projectKey=jorgeandreudev_retail-platform
 sonar.projectName=retail-platform
 sonar.coverage.exclusions=**/infrastructure/api/**,**/ApiUtil.java,**/ProductsServiceApplication.java,**/WebResponseUtil.java
 sonar.sourceEncoding=UTF-8
+
+
+sonar.java.binaries=**/target/classes
+sonar.junit.reportPaths=**/target/surefire-reports
+sonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco/jacoco.xml
