--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,24 +8,14 @@ on:
     branches: [ main, master ]
 
 jobs:
-  build-and-test:
+  build-test-sonar:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          distribution: temurin
-          java-version: '21'
-          cache: maven
-      - name: Build & Test with coverage (fail if coverage < threshold)
-        run: mvn -B -U clean verify
+          fetch-depth: 0   # importante para Sonar (history)
 
-  sonarcloud:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -33,16 +23,5 @@ jobs:
           java-version: '21'
           cache: maven
 
-      # IMPORTANTE: compilar aquí también para tener target/classes
-      - name: Build (no tests) for analyzer classpath
-        run: mvn -B -U -DskipTests package
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=jorgeandreudev
-            -Dsonar.projectKey=jorgeandreudev_retail-platform
-            -Dsonar.java.binaries=**/target/classes
+      - name: Build, test, coverage & SonarCloud (single run)
+        run: mvn -B -U clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.token=${{ secrets.SONAR_TOKEN }}
