--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <sonar.organization>jorgeandreudev</sonar.organization>
+    <sonar.projectKey>jorgeandreudev_retail-platform</sonar.projectKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencyManagement>
