--- a/products-service/.github/workflows/sonar.yml
+++ b/products-service/.github/workflows/sonar.yml
@@ -1,36 +1,47 @@
-name: SonarQube
+name: CI
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
+
+permissions:
+  contents: read
+  pull-requests: write  # necesario para la decoración de PR
+
 jobs:
-  build:
-    name: Build and analyze
+  build-and-analyze:
+    name: Build, test, coverage & SonarCloud
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
+          fetch-depth: 0  # importante para "new code" en Sonar
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available.
-      - name: Cache SonarQube packages
+          distribution: temurin
+          java-version: '21'
+          cache: maven
+
+      - name: Cache Sonar packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+
+      - name: Build, test, coverage & SonarCloud (single run)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=jorgeandreudev_retail-platform
+        run: |
+          mvn -B -U clean verify \
+            org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.token=$SONAR_TOKEN \
+            -Dsonar.organization=jorgeandreudev \
+            -Dsonar.projectKey=jorgeandreudev_retail-platform \
+            -Dsonar.host.url=https://sonarcloud.io
