--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,11 @@
-# Project identification
+sonar.host.url=https://sonarcloud.io
 sonar.organization=jorgeandreudev
 sonar.projectKey=jorgeandreudev_retail-platform
 sonar.projectName=retail-platform
-
-# Sources
-sonar.sources=.
-sonar.inclusions=products-service/src/main/java/**
-sonar.exclusions=**/target/**, **/generated-sources/**
-sonar.java.binaries=products-service/target/classes
-
-# Tests
-sonar.tests=products-service/src/test/java
-sonar.test.inclusions=**/*Test.java,**/*Tests.java
-sonar.junit.reportPaths=products-service/target/surefire-reports
-sonar.coverage.jacoco.xmlReportPaths=products-service/target/site/jacoco/jacoco.xml
-
-# Encoding
+sonar.coverage.exclusions=**/infrastructure/api/**,**/ApiUtil.java,**/ProductsServiceApplication.java,**/WebResponseUtil.java
 sonar.sourceEncoding=UTF-8
+
+
+sonar.java.binaries=**/target/classes
+sonar.junit.reportPaths=**/target/surefire-reports
+sonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco/jacoco.xml
