--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,27 @@
-
-**Workflow CI simple** `/.github/workflows/ci.yml`
-```yaml
+# .github/workflows/ci.yml
 name: CI
+
 on:
   pull_request:
+    branches: [ main, master ]
   push:
-    branches: [main]
+    branches: [ main, master ]
+
 jobs:
-  build-test:
+  build-test-sonar:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          distribution: 'temurin'
+          fetch-depth: 0   # importante para Sonar (history)
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
           java-version: '21'
-      - uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: maven-${{ hashFiles('**/pom.xml') }}
-      - name: Build
-        run: mvn -q -DskipTests=false clean verify
+          cache: maven
+
+      - name: Build, test, coverage & SonarCloud (single run)
+        run: mvn -B -U clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.token=${{ secrets.SONAR_TOKEN }}
