implement DELETE /products/{id} with soft delete

--- a/contracts/products/products-v1.yaml
+++ b/contracts/products/products-v1.yaml
@@ -96,6 +96,25 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
 
+    delete:
+      tags: [ Products ]
+      summary: Delete product by id (soft delete)
+      operationId: deleteProductById
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '204':
+          description: Product deleted successfully
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
 
 components:
   schemas:
