--- a/contracts/products/products-v1.yaml
+++ b/contracts/products/products-v1.yaml
@@ -39,6 +39,35 @@ paths:
               schema:
                 $ref: '../common/components.yaml#/components/schemas/Problem'
 
+    get:
+      tags: [ Products ]
+      summary: List products (simple pagination & sorting)
+      operationId: listProducts
+      parameters:
+        - in: query
+          name: page
+          schema: { type: integer, minimum: 0, default: 0 }
+        - in: query
+          name: size
+          schema: { type: integer, minimum: 1, maximum: 200, default: 20 }
+        - in: query
+          name: sort
+          schema:
+            type: string
+            description: 'Property and direction, e.g. "createdAt,desc"'
+            example: "createdAt,desc"
+        - in: query
+          name: includeDeleted
+          schema: { type: boolean, default: false }
+      responses:
+        '200':
+          description: Page of products
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ProductPage' }
+        '400':
+          $ref: '#/components/responses/BadRequest'
+
   /products/search:
     post:
       tags: [Products]
